--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.7.0",
-    "@discordjs/voice": "^0.8.0",
-    "discord-music-player": "^9.1.1",
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
+    "@jadestudios/discord-music-player": "^9.1.1-az23",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.4",
     "ffmpeg-static": "^5.1.0",
     "isomorphic-unfetch": "^3.1.0",
     "pretty-ms": "^7.0.1",
-    "sequelize": "^6.31.1",
+    "sequelize": "^6.32.0",
     "sqlite3": "^5.1.6",
     "ytdl-core": "^4.11.4"
   },
   "devDependencies": {
-    "eslint": "^8.40.0",
-    "jshint": "^2.13.5"
+    "eslint": "^8.42.0",
+    "jshint": "^2.13.6"
   }
 }
